# bind

./: CMakeLists.txt  CNAME  README.md  bind.hpp  build.sh  index.html  manifest.json  params.json
css/: general.css  mobile.css
examples/: Makefile  Makefile.cpu  Makefile.cuda  Makefile.gpu  Makefile.mp  Makefile.node  array.cpp  array_gpu.cpp  atomic.cpp  diffusion  diffusion.cpp  filter.cpp  future.cpp  mapreduce.cpp  matrix.cpp  max_rank.cpp  mp_gemm.cpp  mp_gemm_log.cpp  mp_gemm_simple.cpp  partitioned_vector.cpp  ptr  ptr.cpp  reduce  reduce.cpp  shared_ptr.cpp  vector  vector.cpp
examples/utils/: bind.hpp  reduce.hpp  timer.hpp
scripts/: common.js
src/: .0.swp  .swp  bind.hpp  build.hpp
src/ambient/: CMakeLists.txt  ambient.cpp  ambient.hpp  readme.txt
src/ambient/channels/mpi/: channel.h  collective.h  collective.hpp  request.h
src/ambient/channels/nop/: channel.h
src/ambient/container/: atomic.hpp  block.hpp  future.hpp  partitioned_vector.hpp  vector.hpp
src/ambient/container/iterator/: associated_iterator.hpp  block_iterator.hpp  cross_iterator.hpp
src/ambient/container/numeric/: boost_bindings.hpp
src/ambient/container/numeric/matrix/: diagonal_matrix.h  matrix.h  matrix.hpp  matrix_algorithms.hpp  tiles.h  tiles_algorithms.hpp  tiles_algorithms_experimental.hpp
src/ambient/container/numeric/matrix/detail/: experimental.hpp  kernels.hpp  math.hpp
src/ambient/container/partitioned_vector/: algorithms.hpp  bitonic_sort.hpp  partitioned_vector.h  partitioned_vector.hpp
src/ambient/container/vector/: detail.hpp  vector.h  vector.hpp
src/ambient/controllers/: actor.h  actor.hpp  backbone.h  backbone.hpp  collector.h  collector.hpp  context_mt.h  context_mt.hpp  context_serial.h  context_serial.hpp  controller.h  controller.hpp  functor.h  get.hpp  set.hpp
src/ambient/controllers/ssm/: actor.h  actor.hpp  backbone.h  backbone.hpp  collector.hpp  context_mt.hpp  controller.hpp  get.h  get.hpp  meta.h  scope.h  scope.hpp  set.h
src/ambient/interface/: access.hpp  allocator.hpp  kernel.hpp  kernel_inliner.hpp  lambda.hpp  typed.hpp
src/ambient/memory/: allocator.h  allocator.hpp  data_bulk.hpp  new.hpp  pool.hpp  region.hpp  types.h
src/ambient/memory/cpu/: comm_bulk.h  comm_bulk.hpp  data_bulk.h  data_bulk.hpp  instr_bulk.h  instr_bulk.hpp  standard.hpp
src/ambient/model/: functor.h  history.h  history.hpp  model.hpp  revision.h  revision.hpp  transformable.h
src/ambient/models/: history.h  history.hpp  locality.h  model.h  model.hpp  revision.h  revision.hpp  transformable.h  transformable.hpp
src/ambient/models/ssm/: history.h  revision.h  transformable.h  transformable.hpp
src/ambient/numeric/kernels/: experimental.hpp  kernels.hpp  utils.hpp
src/ambient/numeric/matrix/: diagonal_matrix.hpp  matrix.hpp  tiles.hpp  tiles_algorithms.hpp
src/ambient/utils/: auxiliary.hpp  io.hpp  meminfo.h  reduce.hpp  vt_override.hpp
src/bind/: .swp  bind.hpp  core.hpp  interface.hpp  memory.hpp  model.hpp  transport.hpp
src/bind/container/: ptr.hpp  vector.h  vector.hpp  vector_async.hpp
src/bind/container/vector/: detail.hpp  vector.h  vector.hpp  vector_async.h  vector_async.hpp
src/bind/core/: actor.h  actor.hpp  controller.h  controller.hpp  scope.hpp
src/bind/interface/: kernel.hpp  kernel_inliner.hpp  lambda.hpp  typed.hpp
src/bind/memory/: cpu.hpp  delegated.h  factory.hpp  types.h
src/bind/memory/cpu/: bulk.h  comm_bulk.hpp  data_bulk.hpp  fixed.hpp  standard.hpp
src/bind/model/: history.hpp  locality.hpp  revision.hpp  transformable.hpp
src/bind/transport/: mpi.hpp
src/bind/transport/mpi/: channel.h  channel.hpp  collective.h  request.h  request.hpp
src/bind/transport/nop/: channel.hpp
src/bind/utils/: auxiliary.hpp  env.hpp  io.hpp  math.hpp  mutex.hpp  rank_t.hpp  threading.hpp  timer.hpp  vt_override.hpp
src/container/: array.h  array.hpp  associated_iterator.hpp  block.hpp  iterator.hpp  proxy_iterator.hpp  ptr.hpp  ptr.hpp.mod  shared_ptr.hpp  smart_ptr.hpp  vector.h  vector.hpp
src/core/: collector.h  collector.hpp  controller.h  controller.hpp  get.h  get.hpp  hub.hpp  hub.hpp.orig  node.h  node.hpp  scope.h  scope.hpp  set.h  set.hpp  transfer.h  transfer.hpp
src/interface/: access.hpp  allocator.hpp  devices.hpp  kernel.hpp  kernel_inliner.hpp  lambda.hpp  modifiers.hpp  shortcuts.hpp  snapshot.hpp  typed.hpp
src/interface/modifiers/: dispatch.hpp  iterator.hpp  ptr.hpp  shared_ptr.hpp  singular.hpp  versioned.hpp
src/memory/: descriptor.hpp  hub.hpp  types.h
src/memory/cpu/: bulk.h  comm_bulk.hpp  data_bulk.hpp  fixed.hpp  instr_bulk.hpp  new.hpp  standard.hpp
src/memory/detail/: factory.hpp  region.hpp
src/memory/gpu/: pinned.hpp  standard.hpp
src/model/: any.hpp  device.hpp  functor.hpp  history.hpp  revision.hpp  transformable.hpp
src/transport/cuda/: channel.hpp
src/transport/mpi/: channel.h  channel.hpp  collective.h  collective.hpp  group.hpp  request.h  request.hpp  tree.hpp
src/transport/nop/: channel.hpp
src/utils/: auxiliary.hpp  dim2.hpp  export.hpp  guard.hpp  guard_once.hpp  index_sequence.hpp  io.hpp  meminfo.hpp  mkl_parallel.hpp  mutex.hpp  overseer.hpp  rank_t.hpp  rss.hpp  static_bind.hpp  testing.hpp  threading.hpp  timer.hpp
tests/functional/: CMakeLists.txt  aux.cast.cpp  aux.sqrt.cpp  blas.add.cpp  blas.sub.cpp  general.elements.cpp  general.resize.cpp  general.rm_cols.cpp  general.rm_rows.cpp  general.trace.cpp  lapack.lq.cpp
tests/performance/: CMakeLists.txt  gemm.ambient.cpp  gemm.blas.cpp  gemm.pblas.cpp  lq.ambient.cpp  lq.lapack.cpp  qr.ambient.cpp  qr.lapack.cpp
